      if the module name didn't contain a ::.  Found with podulators.
      Fixed.
    * Skipping installation of RCS ,v files.
    * 'make ci' was busted between 6.05 and 6.06_01.  Fixed. (Andreas)
    - 'make test' was broken when there's no tests.  Introduced in 6.06_03.
      (Stas Bekman)
    - Solving some directory depth problems in tests on oldish VMS systems.
      (Craig Berry)

6.10_02 Mon Apr  7 00:57:15 PDT 2003
    * Removed 2>&1 experiment introduced in 6.10_01 for all non-Unixen
      except for OS/2.  Thought Perl might emulate `... 2>&1`.  It doesn't.
      Just on OS/2.

6.10_01 Sun Apr  6 19:31:42 PDT 2003
    - Making install "Skip ... (unchanged)" message happen consistently
    - Checking file sizes as well as modification times when deciding
      to skip installing a file.
    - OS/2 was using $(RM) instead of $(RM_F) (Ilya)
    - OS/2 needs .dll removed on failed build (Ilya)
    - fixin() was assuming that rename() can overwrite the target (Ilya)
    - manifypods target was empty if there are no pods to manify.  Put in
      at least $(NOECHO) $(NOOP)
    - Cygwin test to check for finding pod2man when building the perl core
      removed.  No longer relevent.
    - Small fixes for dmake (Mattia Barbon)
    * Added "Reporting bugs" section to the PATCHING doc.
    - Minor bug in compile test missed ExtUtils::Liblist::Kid
    - Removing $(VERSION_FROM) from Makefile dependency.  It was too
      annoying to rebuild the Makefile every time the module changed.
      Mentioned it in the FAQ instead.
    - Fixing PERL_ARCHIVE macro on VMS.  Apparently it never appeared
      properly before. (Craig Berry)
    - Fixing ECHO on dmake.
    - Adding os_flavor() and os_flavor_is()
    - Making basic.t error output combine STDOUT & STDERR for easier 
      reading.
    * ExtUtils::Manifest will now work case insensitively.
    - Fixed 'subroutine redefined' warnings in 00compile.t