@@ -11,6 +11,9 @@
       (Stas Bekman)
     - Solving some directory depth problems in tests on oldish VMS systems.
       (Craig Berry)
+    - Fixing MM_MacOS so it compiles on UTF-8 systems. (Jarkko)
+    - Making find_perl() more talkative when the version check fails
+      miserably.
 
 6.10_02 Mon Apr  7 00:57:15 PDT 2003
     * Removed 2>&1 experiment introduced in 6.10_01 for all non-Unixen
